--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ apply plugin: 'name.remal.toolkit.build-logic'
 apply plugin: 'java-gradle-plugin'
 
 dependencies {
+    externalPluginsToTest 'name.remal.test-source-sets:name.remal.test-source-sets.gradle.plugin:4.1.1'
 }
 
 gradlePlugin {
